--- a/src/Layouts/DashboardLayout.css
+++ b/src/Layouts/DashboardLayout.css
@@ -1,12 +1,15 @@
 .bread {
     background-color: gold;
     padding: 5px;
+    display: flex;
+    justify-content: center;
 }
 .bread a {
     text-decoration: none;
     font-weight: 600;
     color: black;
     padding: 10px;
+    margin: 5px;
 }
 
 .bread a :hover {
